--- a/Sznajd/Description
+++ b/Sznajd/Description
@@ -1,1 +1,4 @@
-This is also an interaction model where each of the individuals have an initial opinion of {-1,1} . A pair of neighboring agents is picked and if they have a similar o
+This is also an interaction model where each of the individuals have an initial opinion of {-1,1} . A pair of neighboring agents is 
+picked and if they have a similar opinion , each of their neigbour takes up that similar opinion. If they do not agree with each 
+other, no changes happen in the model. This is based on the fact that if many people have a certain opinion, people tend to take up that
+opinion. But if an individual has some opinion, people generally do not start taking up his/her opinion.
